[refs #84441] Emails table - fix wrong color for border.

--- a/src/eni/seis/theme/theme-south/src/less/south.less
+++ b/src/eni/seis/theme/theme-south/src/less/south.less
@@ -583,3 +583,7 @@ a.btn.btn-default[data-diazo='manage-portlets'] {
 :focus {
   outline: none;
 }
+
+.table.display-email > thead > tr > th {
+  border-bottom: 1px solid @color-gray-dark !important;
+}
